--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </section>
       <!--  №2 -->
-      <section class="alarm">
+      <!-- <section class="alarm">
         <div class="container">
           <ul class="alarm-list">
             <li class="alarm-item">
@@ -99,7 +99,7 @@
           </ul>
         </div>
       </section>
-      <!--  №3 -->
+
       <section class="work">
         <div class="container">
           <h2 class="work-title">Чим ми займаэмося</h2>
@@ -125,8 +125,8 @@
           </ul>
         </div>
       </section>
-      <!--  №4 -->
-      <section class="team">
+    
+      <section class="alarm">
         <div class="container">
           <h2 class="team-h2">Наша Команда</h2>
           <ul class="team-ul">
@@ -168,6 +168,88 @@
             </li>
           </ul>
         </div>
+      </section> s -->
+
+      <section class="alarm">
+        <div class="container">
+        <ul class="alarm-list">
+          <li class="alarm-imet ">
+            <h2 class="alarm-subtle">УВАГА ДО ДЕТАЛЕЙ</h2>
+            <p class="alarm-text">
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li class="alarm-imet">
+            <h2 class="alarm-subtle">ПУНКТУАЛЬНІСТЬ</h2>
+            <p class="alarm-text">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li class="alarm-imet">
+            <h2 class="alarm-subtle">ПЛАНУВАННЯ</h2>
+            <p class="alarm-text">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+
+          <li class="alarm-imet">
+            <h2 class="alarm-subtle">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <p class="alarm-text">
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </div>
+      </section>
+      <!-- doing -->
+      <section class="work">
+        <div class="container">
+        <h2 class="work-title">Чим ми займаемся</h2>
+        <ul class="work-list">
+          <li class="work-pic"><img src="./images/comp.jpg" alt="comp" /></li>
+          <li class="work-pic"><img src="./images/tel.jpg" alt="tel" /></li>
+          <li class="work-pic"><img src="./images/tablet.jpg" alt="tablet" /></li>
+        </ul>
+      </div>
+      </section>
+<!-- our tim -->
+      <section class="team">
+    <div class="container">
+        <h2 class="team-h2">Наша команда</h2>
+        <ul class="team-ul">
+          <li class="content-item ">
+            <img src="./images/igor.jpg" class="tim-foto" width="260" alt="igor" />
+            <div class="team-div">
+            <h3 class="team-h3">Ігор Дем'яненко</h3>
+            <p class="team-ul-p">Product Designer</p>
+          </div>
+          </li>
+          <li class="content-item">
+            <img src="./images/olga.jpg" class="tim-foto"  width="260" alt="olga" />
+            <div class="team-div">
+            <h3 class="team-h3">Ольга Рєпіна</h3>
+            <p class="team-ul-p">Frontend Developer</p>
+            </div>
+          </li>
+          <li class="content-item">
+            <img src="./images.krakva/mikolya.png" class="tim-foto"  width="260"alt="macl" />
+            <div class="team-div">
+            <h3 class="team-h3">Микола Тарасов</h3>
+            <p class="team-ul-p">Marketing</p>
+          </div>
+          </li>
+          <li class="content-item">
+            <img src="./images.krakva/mihaial.png" class="tim-foto" width="260" alt="mixa" />
+            <div class="team-div">
+            <h3 class="team-h3">Михайло Єрмаков</h3>
+            <p class="team-ul-p">UI Designer</p>
+          </div>
+          </li>
+        </ul>
+      </div>
       </section>
     </main>
     <!--  №5 -->
