--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <nav class="header-nav">
           <ul class="header-list">
             <li class="header-item">
-              <a href="./index.html" class="header-avatar">Студія </a>
+              <a href="./stydio.html" class="header-avatar">Студія </a>
             </li>
             <li class="header-item">
               <a href="./portfolio.html" class="header-avatar"> Портфоліо</a>
             </li>
             <li class="header-item">
-              <a href="#" class="header-avatar">Контакти </a>
+              <a href="kontakti.html" class="header-avatar">Контакти </a>
             </li>
           </ul>
         </nav>
@@ -65,111 +65,7 @@
           </button>
         </div>
       </section>
-      <!--  №2 -->
-      <!-- <section class="alarm">
-        <div class="container">
-          <ul class="alarm-list">
-            <li class="alarm-item">
-              <h3 class="alarm-subtle">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="alarm-text">
-                Ідейні міркування, і навіть початок повсякденної роботи з
-                формування позиції.
-              </p>
-            </li>
-            <li class="alarm-item">
-              <h3 class="alarm-subtle">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="alarm-text">
-                Завдання організації, особливо рамки і місце навчання кадрів
-                тягне у себе.
-              </p>
-            </li>
-            <li class="alarm-item">
-              <h3 class="alarm-subtle">ПЛАНУВАННЯ</h3>
-              <p class="alarm-text">
-                Так само консультація з широким активом значною мірою зумовлює.
-              </p>
-            </li>
-            <li class="alarm-item">
-              <h3 class="alarm-subtle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="alarm-text">
-                Значимість цих проблем настільки очевидна, що реалізація
-                планових завдань.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="work">
-        <div class="container">
-          <h2 class="work-title">Чим ми займаэмося</h2>
-          <ul class="work-list">
-            <li >
-              <img
-                class="work-pic"
-                src="./images.krakva/programming.png"
-                alt="ппрроггрраммуввання"/>
-            </li>
-            <li >
-              <img
-                class="work-pic"
-                src="./images.krakva/marketing.png"
-                alt="Маркеттинг"/>
-            </li>
-            <li>
-              <img
-                class="work-pic"
-                src="./images.krakva/paint-diz.png"
-                alt="Дизайн"/>
-            </li>
-          </ul>
-        </div>
-      </section>
-    
-      <section class="alarm">
-        <div class="container">
-          <h2 class="team-h2">Наша Команда</h2>
-          <ul class="team-ul">
-            <li class="team-ul-li">
-              <img
-                class="team-pic"
-                src="./images.krakva/egor.png"
-                alt="Iгор Дем'яненко"
-              />
-              <h3 class="team-h3">Iгор Дем'яненко</h3>
-              <p class="team-ul-p">Product Designer</p>
-            </li>
-            <li class="team-ul-li">
-              <img
-                class="team-pic"
-                src="./images.krakva/olga.png"
-                alt="Ольга Рэпiна"
-              />
-              <h3 class="team-h3">Ольга Рэпiна</h3>
-              <p class="team-ul-p">Front-end Developer</p>
-            </li>
-            <li class="team-ul-li">
-              <img
-                class="team-pic"
-                src="./images.krakva/mikolya.png"
-                alt="Микола Тарасов"
-              />
-              <h3 class="team-h3">Микола Тарасов</h3>
-              <p class="team-ul-p">Marketing</p>
-            </li>
-            <li class="team-ul-li">
-              <img
-                class="team-pic"
-                src="./images.krakva/mihaial.png"
-                alt="Михайло Эрмаков"
-              />
-              <h3 class="team-h3">Михайло Эрмаков</h3>
-              <p class="team-ul-p">UI Designer</p>
-            </li>
-          </ul>
-        </div>
-      </section> s -->
-
+<!-- ALARM!!!!!!!! -->
       <section class="alarm">
         <div class="container">
         <ul class="alarm-list">
@@ -193,7 +89,6 @@
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-
           <li class="alarm-imet">
             <h2 class="alarm-subtle">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
             <p class="alarm-text">
@@ -204,38 +99,38 @@
         </ul>
       </div>
       </section>
-      <!-- doing -->
+      <!-- work -->
       <section class="work">
         <div class="container">
         <h2 class="work-title">Чим ми займаемся</h2>
         <ul class="work-list">
-          <li class="work-pic"><img src="./images/comp.jpg" alt="comp" /></li>
-          <li class="work-pic"><img src="./images/tel.jpg" alt="tel" /></li>
-          <li class="work-pic"><img src="./images/tablet.jpg" alt="tablet" /></li>
+          <li class="work-pic"><img src="./images.krakva/programming.png" alt="comp" /></li>
+          <li class="work-pic"><img src="./images.krakva/marketing.png" alt="tel" /></li>
+          <li class="work-pic"><img src="./images.krakva/paint-diz.png" alt="tablet" /></li>
         </ul>
       </div>
       </section>
-<!-- our tim -->
+<!-- our team -->
       <section class="team">
     <div class="container">
         <h2 class="team-h2">Наша команда</h2>
         <ul class="team-ul">
           <li class="content-item ">
-            <img src="./images/igor.jpg" class="tim-foto" width="260" alt="igor" />
+            <img src="./images.krakva/egor.png" class="team-pic" width="260" alt="igor" />
             <div class="team-div">
             <h3 class="team-h3">Ігор Дем'яненко</h3>
             <p class="team-ul-p">Product Designer</p>
           </div>
           </li>
           <li class="content-item">
-            <img src="./images/olga.jpg" class="tim-foto"  width="260" alt="olga" />
+            <img src="./images.krakva/olga.png" class="team-pic"  width="260" alt="olga" />
             <div class="team-div">
             <h3 class="team-h3">Ольга Рєпіна</h3>
             <p class="team-ul-p">Frontend Developer</p>
             </div>
           </li>
           <li class="content-item">
-            <img src="./images.krakva/mikolya.png" class="tim-foto"  width="260"alt="macl" />
+            <img src="./images.krakva/mikolya.png" class="team-pic"  width="260"alt="macl" />
             <div class="team-div">
             <h3 class="team-h3">Микола Тарасов</h3>
             <p class="team-ul-p">Marketing</p>
@@ -263,13 +158,11 @@
             </li>
             <li class="foot-li">
               <a class="foot-ul-li-aa" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+                >info@devstudio.com</a>
             </li>
             <li class="foot-li">
               <a class="foot-ul-li-aa" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+                >+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
