--- a/portfolio.html
+++ b/portfolio.html
@@ -1,129 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Портфолио </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Портфолио</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- нормолайз  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <header class="header">
-        <div class="container header-container">
-          <a href="./index.html" class="header-logo">Studio</a>
-          <nav class="header-nav">
-            <ul class="header-list">
-              <li class="header-item">
-                <a href="./stydio.html" class="header-avatar">Студія </a>
-              </li>
-              <li class="header-item">
-                <a href="./portfolio.html" class="header-avatar"> Портфоліо</a>
-              </li>
-              <li class="header-item">
-                <a href="kontakti.html" class="header-avatar">Контакти </a>
-              </li>
-            </ul>
-          </nav>
-          <ul class="header-items">
+      <div class="container header-container">
+        <a href="./index.html" class="header-logo">Studio</a>
+        <nav class="header-nav">
+          <ul class="header-list">
             <li class="header-item">
-              <a href="mailto:info@devstudio.com" class="header-thumb"
-                >info@devstudio.com</a>
+              <a href="./stydio.html" class="header-avatar">Студія </a>
             </li>
             <li class="header-item">
-              <a href="tel:+380961111111" class="header-thumb"
-                >+38 096 111 11 11
-              </a>
+              <a href="./portfolio.html" class="header-avatar"> Портфоліо</a>
+            </li>
+            <li class="header-item">
+              <a href="kontakti.html" class="header-avatar">Контакти </a>
             </li>
           </ul>
-        </div>
-      </header>
+        </nav>
+        <ul class="header-items">
+          <li class="header-item">
+            <a href="mailto:info@devstudio.com" class="header-thumb"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-item">
+            <a href="tel:+380961111111" class="header-thumb"
+              >+38 096 111 11 11
+            </a>
+          </li>
+        </ul>
+      </div>
+    </header>
 
     <main>
-     <section class="buttons">
+      <section class="buttons">
         <div class="container">
           <ul class="buttons-list">
-            <li class="buttons-items"> <button class="buttons-button"> Усi </button> </li>
-            <li class="buttons-items"> <button class="buttons-button"> Веб-Сайти </button> </li>
-            <li class="buttons-items"> <button class="buttons-button"> Додатоки </button> </li>
-            <li class="buttons-items"> <button class="buttons-button"> Дизайн </button> </li>
-            <li class="buttons-items"> <button class="buttons-button"> Маркетинг </button> </li>
+            <li class="buttons-items">
+              <button class="buttons-button">Усi</button>
+            </li>
+            <li class="buttons-items">
+              <button class="buttons-button">Веб-Сайти</button>
+            </li>
+            <li class="buttons-items">
+              <button class="buttons-button">Додатоки</button>
+            </li>
+            <li class="buttons-items">
+              <button class="buttons-button">Дизайн</button>
+            </li>
+            <li class="buttons-items">
+              <button class="buttons-button">Маркетинг</button>
+            </li>
           </ul>
 
           <ul class="buttons-gallery">
             <li class="buttons-item">
-              <div class="buttons-div">
-                 <img class="buttons-photo" src="./images.krakva/moc.png" alt="Техно-Кряк"> <h2 class="buttons-h2">Техно-Кряк</h2> <p class="buttons-p" >Веб-Сайт</p>
-               </div>  
-                </li>
+                <img
+                  class="buttons-photo"
+                  src="./images.krakva/moc.png"
+                  alt="Техно-Кряк"
+                />
+                <div class="buttons-div">
+                <h2 class="buttons-h2">Технокряк</h2>
+                <p class="buttons-p">Веб-Сайт</p>
+              </div>
+            </li>
             <li class="buttons-item">
-              <div class="buttons-div">
-                 <img class="buttons-photo" src="./images.krakva/nba.png" alt="NBA"> <h2 class="buttons-h2">NBA</h2> <p class="buttons-p" >Дизайн</p>
-               </div>  
-                </li>
+                <img
+                  class="buttons-photo"
+                  src="./images.krakva/nba.png"
+                  alt="NBA"
+                />
+                <div class="buttons-div">
+                <h2 class="buttons-h2">Постер New Orlean vs Golden Star</h2>
+                <p class="buttons-p">Дизайн</p>
+              </div>
+            </li>
             <li class="buttons-item">
-              <div class="buttons-div">
-                 <img class="buttons-photo" src="./images.krakva/seafood.png" alt="Seafood"> <h2 class="buttons-h2">Seafood</h2> <p class="buttons-p" >Додаток</p>
-               </div>  
-                </li>
+                <img
+                  class="buttons-photo"
+                  src="./images.krakva/seafood.png"
+                  alt="Seafood"
+                />
+                <div class="buttons-div">
+                <h2 class="buttons-h2">Ресторан Seafood</h2>
+                <p class="buttons-p">Додаток</p>
+              </div>
+            </li>
             <li class="buttons-item">
-              <div class="buttons-div">
-                 <img class="buttons-photo" src="./images.krakva/prime.png" alt="Prime"> <h2 class="buttons-h2">Prime</h2> <p class="buttons-p" >Маркетинг</p>
-               </div>  
-                </li>
+                <img
+                  class="buttons-photo"
+                  src="./images.krakva/prime.png"
+                  alt="Prime"
+                />
+                <div class="buttons-div">
+                <h2 class="buttons-h2">Проєкт Prime</h2>
+                <p class="buttons-p">Маркетинг</p>
+              </div>
+            </li>
             <li class="buttons-item">
-              <div class="buttons-div">
-                 <img class="buttons-photo" src="./images.krakva/boxes.png" alt="Boxes"> <h2 class="buttons-h2">Boxes</h2> <p class="buttons-p" >Додаток</p>
-               </div>  
-                </li>
+                <img
+                  class="buttons-photo"
+                  src="./images.krakva/boxes.png"
+                  alt="Boxes"
+                />
+                <div class="buttons-div">
+                <h2 class="buttons-h2">Проєкт Boxes</h2>
+                <p class="buttons-p">Додаток</p>
+              </div>
+            </li>
             <li class="buttons-item">
-              <div class="buttons-div">
-                 <img class="buttons-photo" src="./images.krakva/mnn.png" alt="Inspiration has no Borders"> <h2 class="buttons-h2">Inspiration has no Borders</h2> <p class="buttons-p" >Веб-Сайт</p>
-               </div>  
-                </li>
+                <img
+                  class="buttons-photo"
+                  src="./images.krakva/mnn.png"
+                  alt="Inspiration has no Borders"
+                />
+                <div class="buttons-div">
+                <h2 class="buttons-h2">Inspiration has no Borders</h2>
+                <p class="buttons-p">Веб-Сайт</p>
+              </div>
+            </li>
             <li class="buttons-item">
-              <div class="buttons-div">
-                 <img class="buttons-photo" src="./images.krakva/gazeta.png" alt="Limited Edition"> <h2 class="buttons-h2">Limited Edition</h2> <p class="buttons-p" >Дизайн</p>
-               </div>  
-                </li>
+                <img
+                  class="buttons-photo"
+                  src="./images.krakva/gazeta.png"
+                  alt="Limited Edition"
+                />
+                <div class="buttons-div">
+                <h2 class="buttons-h2"> Виданя Limited Edition</h2>
+                <p class="buttons-p">Дизайн</p>
+              </div>
+            </li>
             <li class="buttons-item">
-              <div class="buttons-div">
-                 <img class="buttons-photo" src="./images.krakva/projectlab.png" alt="LAB"> <h2 class="buttons-h2">LAB</h2> <p class="buttons-p" >Маркетинг</p>
-               </div> 
-                </li>
+                <img
+                  class="buttons-photo"
+                  src="./images.krakva/projectlab.png"
+                  alt="LAB"
+                />
+                <div class="buttons-div">
+                <h2 class="buttons-h2">Проєкт LAB</h2>
+                <p class="buttons-p">Маркетинг</p>
+              </div>
+            </li>
             <li class="buttons-item">
-              <div class="buttons-div">
-                 <img class="buttons-photo" src="./images.krakva/minemoney.png" alt="Growing Business"> <h2 class="buttons-h2">Growing Business</h2> <p class="buttons-p" >Додаток</p>
-               </div>  
-                </li>
-           </ul>
+              
+                <img
+                  class="buttons-photo"
+                  src="./images.krakva/minemoney.png"
+                  alt="Growing Business"
+                />
+                <div class="buttons-div">
+                <h2 class="buttons-h2">Growing Business</h2>
+                <p class="buttons-p">Додаток</p>
+              </div>
+            </li>
+          </ul>
         </div>
-    </section>
+      </section>
     </main>
 
     <footer class="foot">
-        <div class="container">
-          <a href="./index.html" class="foot-logo">Studio</a>
-          <address class="foot-adrs">
-            <ul class="foot-ul">
-              <li class="foot-li">
-                <a class="foot-ul-li-a">м. Київ, пр-т Лесі Українки, 26</a>
-              </li>
-              <li class="foot-li">
-                <a class="foot-ul-li-aa" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a>
-              </li>
-              <li class="foot-li">
-                <a class="foot-ul-li-aa" href="tel:+380961111111"
-                  >+38 096 111 11 11</a>
-              </li>
-            </ul>
-          </address>
-        </div>
-      </footer>
-</body>
+      <div class="container">
+        <a href="./index.html" class="foot-logo">Studio</a>
+        <address class="foot-adrs">
+          <ul class="foot-ul">
+            <li class="foot-li">
+              <a class="foot-ul-li-a">м. Київ, пр-т Лесі Українки, 26</a>
+            </li>
+            <li class="foot-li">
+              <a class="foot-ul-li-aa" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="foot-li">
+              <a class="foot-ul-li-aa" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+    </footer>
+  </body>
 </html>
