--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 >info@devstudio.com</a>
             </li>
             <li class="foot-li">
-              <a class="foot-ul-li-aa" href="tel:+380961111111"
+              <a class="foot-ul-li-aaa" href="tel:+380961111111"
                 >+38 096 111 11 11</a>
             </li>
           </ul>
