--- a/index.html
+++ b/index.html
@@ -115,28 +115,28 @@
     <div class="container">
         <h2 class="team-h2">Наша команда</h2>
         <ul class="team-ul">
-          <li class="content-item ">
+          <li class="team-item ">
             <img src="./images.krakva/egor.png" class="team-pic" width="260" alt="igor" />
             <div class="team-div">
             <h3 class="team-h3">Ігор Дем'яненко</h3>
             <p class="team-ul-p">Product Designer</p>
           </div>
           </li>
-          <li class="content-item">
+          <li class="team-item">
             <img src="./images.krakva/olga.png" class="team-pic"  width="260" alt="olga" />
             <div class="team-div">
             <h3 class="team-h3">Ольга Рєпіна</h3>
             <p class="team-ul-p">Frontend Developer</p>
             </div>
           </li>
-          <li class="content-item">
+          <li class="team-item">
             <img src="./images.krakva/mikolya.png" class="team-pic"  width="260"alt="macl" />
             <div class="team-div">
             <h3 class="team-h3">Микола Тарасов</h3>
             <p class="team-ul-p">Marketing</p>
           </div>
           </li>
-          <li class="content-item">
+          <li class="team-item">
             <img src="./images.krakva/mihaial.png" class="tim-foto" width="260" alt="mixa" />
             <div class="team-div">
             <h3 class="team-h3">Михайло Єрмаков</h3>
