--- a/index.html
+++ b/index.html
@@ -69,27 +69,27 @@
       <section class="alarm">
         <div class="container">
         <ul class="alarm-list">
-          <li class="alarm-imet ">
+          <li class="alarm-item">
             <h2 class="alarm-subtle">УВАГА ДО ДЕТАЛЕЙ</h2>
             <p class="alarm-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li class="alarm-imet">
+          <li class="alarm-item">
             <h2 class="alarm-subtle">ПУНКТУАЛЬНІСТЬ</h2>
             <p class="alarm-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li class="alarm-imet">
+          <li class="alarm-item">
             <h2 class="alarm-subtle">ПЛАНУВАННЯ</h2>
             <p class="alarm-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li class="alarm-imet">
+          <li class="alarm-item">
             <h2 class="alarm-subtle">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
             <p class="alarm-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
@@ -104,9 +104,9 @@
         <div class="container">
         <h2 class="work-title">Чим ми займаемся</h2>
         <ul class="work-list">
-          <li class="work-pic"><img src="./images.krakva/programming.png" alt="comp" /></li>
-          <li class="work-pic"><img src="./images.krakva/marketing.png" alt="tel" /></li>
-          <li class="work-pic"><img src="./images.krakva/paint-diz.png" alt="tablet" /></li>
+          <li class="work-pic"><img src="./images.krakva/programming.webp" alt="comp" /></li>
+          <li class="work-pic"><img src="./images.krakva/marketing.webp" alt="tel" /></li>
+          <li class="work-pic"><img src="./images.krakva/paint-diz.webp" alt="tablet" /></li>
         </ul>
       </div>
       </section>
@@ -116,28 +116,28 @@
         <h2 class="team-h2">Наша команда</h2>
         <ul class="team-ul">
           <li class="team-item ">
-            <img src="./images.krakva/egor.png" class="team-pic" width="260" alt="igor" />
+            <img src="./images.krakva/egor.webp" class="team-pic" width="260" alt="igor" />
             <div class="team-div">
             <h3 class="team-h3">Ігор Дем'яненко</h3>
             <p class="team-ul-p">Product Designer</p>
           </div>
           </li>
           <li class="team-item">
-            <img src="./images.krakva/olga.png" class="team-pic"  width="260" alt="olga" />
+            <img src="./images.krakva/olga.webp" class="team-pic"  width="260" alt="olga" />
             <div class="team-div">
             <h3 class="team-h3">Ольга Рєпіна</h3>
             <p class="team-ul-p">Frontend Developer</p>
             </div>
           </li>
           <li class="team-item">
-            <img src="./images.krakva/mikolya.png" class="team-pic"  width="260"alt="macl" />
+            <img src="./images.krakva/mikolya.webp" class="team-pic"  width="260"alt="macl" />
             <div class="team-div">
             <h3 class="team-h3">Микола Тарасов</h3>
             <p class="team-ul-p">Marketing</p>
           </div>
           </li>
           <li class="team-item">
-            <img src="./images.krakva/mihaial.png" class="tim-foto" width="260" alt="mixa" />
+            <img src="./images.krakva/mihaial.webp" class="tim-foto" width="260" alt="mixa" />
             <div class="team-div">
             <h3 class="team-h3">Михайло Єрмаков</h3>
             <p class="team-ul-p">UI Designer</p>
