--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
             <li class="buttons-item">
                 <img
                   class="buttons-photo"
-                  src="./images.krakva/moc.png"
+                  src="./images.krakva/moc.webp"
                   alt="Техно-Кряк"
                 />
                 <div class="buttons-div">
@@ -89,7 +89,7 @@
             <li class="buttons-item">
                 <img
                   class="buttons-photo"
-                  src="./images.krakva/nba.png"
+                  src="./images.krakva/nba.webp"
                   alt="NBA"
                 />
                 <div class="buttons-div">
@@ -100,7 +100,7 @@
             <li class="buttons-item">
                 <img
                   class="buttons-photo"
-                  src="./images.krakva/seafood.png"
+                  src="./images.krakva/seafood.webp"
                   alt="Seafood"
                 />
                 <div class="buttons-div">
@@ -111,7 +111,7 @@
             <li class="buttons-item">
                 <img
                   class="buttons-photo"
-                  src="./images.krakva/prime.png"
+                  src="./images.krakva/prime.webp"
                   alt="Prime"
                 />
                 <div class="buttons-div">
@@ -122,7 +122,7 @@
             <li class="buttons-item">
                 <img
                   class="buttons-photo"
-                  src="./images.krakva/boxes.png"
+                  src="./images.krakva/boxes.webp"
                   alt="Boxes"
                 />
                 <div class="buttons-div">
@@ -133,7 +133,7 @@
             <li class="buttons-item">
                 <img
                   class="buttons-photo"
-                  src="./images.krakva/mnn.png"
+                  src="./images.krakva/mnn.webp"
                   alt="Inspiration has no Borders"
                 />
                 <div class="buttons-div">
@@ -144,7 +144,7 @@
             <li class="buttons-item">
                 <img
                   class="buttons-photo"
-                  src="./images.krakva/gazeta.png"
+                  src="./images.krakva/gazeta.webp"
                   alt="Limited Edition"
                 />
                 <div class="buttons-div">
@@ -155,7 +155,7 @@
             <li class="buttons-item">
                 <img
                   class="buttons-photo"
-                  src="./images.krakva/projectlab.png"
+                  src="./images.krakva/projectlab.webp"
                   alt="LAB"
                 />
                 <div class="buttons-div">
@@ -167,7 +167,7 @@
               
                 <img
                   class="buttons-photo"
-                  src="./images.krakva/minemoney.png"
+                  src="./images.krakva/minemoney.webp"
                   alt="Growing Business"
                 />
                 <div class="buttons-div">
