--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
           </li>
           <li class="team-item">
-            <img src="./images.krakva/mihaial.webp" class="tim-foto" width="260" alt="mixa" />
+            <img src="./images.krakva/mihaial.webp" class="team-pic" width="260" alt="mixa" />
             <div class="team-div">
             <h3 class="team-h3">Михайло Єрмаков</h3>
             <p class="team-ul-p">UI Designer</p>
