--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav class="header-nav">
           <ul class="header-list">
             <li class="header-item">
-              <a href="./stydio.html" class="header-avatar">Студія </a>
+              <a href="./index.html" class="header-avatar">Студія </a>
             </li>
             <li class="header-item">
               <a href="./portfolio.html" class="header-avatar"> Портфоліо</a>
