--- a/portfolio.html
+++ b/portfolio.html
@@ -41,12 +41,17 @@
         <ul class="header-items">
           <li class="header-item">
             <a href="mailto:info@devstudio.com" class="header-thumb"
-              >info@devstudio.com</a
+              ><svg class="header-svg">
+                 <use href="./images.krakva/symbol-defs.svg#icon-envelope"> </use>
+                </svg>info@devstudio.com</a
             >
           </li>
           <li class="header-item">
             <a href="tel:+380961111111" class="header-thumb"
-              >+38 096 111 11 11
+              >
+              <svg class="header-svg">
+                <use href="./images.krakva/symbol-defs.svg#icon-smartphone"> </use>
+               </svg>+38 096 111 11 11
             </a>
           </li>
         </ul>
@@ -182,6 +187,7 @@
 
     <footer class="foot">
       <div class="container">
+      <div>
         <a href="./index.html" class="foot-logo">Studio</a>
         <address class="foot-adrs">
           <ul class="foot-ul">
@@ -190,16 +196,48 @@
             </li>
             <li class="foot-li">
               <a class="foot-ul-li-aa" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+                >info@devstudio.com</a>
             </li>
             <li class="foot-li">
-              <a class="foot-ul-li-aa" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+              <a class="foot-ul-li-aaa" href="tel:+380961111111"
+                >+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
+      </div>
+        <div class="footer-social">
+          <h2 class="footer-tiitle">приєднуйтесь</h2>
+          <ul class="footer-items">
+            <li class="footer-elemet">
+              <a href="" class="footer-link">
+                <svg class="footer-icon">
+                  <use href="./images.krakva/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-elemet">
+              <a href="" class="footer-link">
+                <svg class="footer-icon">
+                  <use href="./images.krakva/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-elemet">
+              <a href="" class="footer-link">
+                <svg class="footer-icon">
+                  <use  href="./images.krakva/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-elemet">
+              <a href="" class="footer-link">
+                <svg class="footer-icon">
+                  <use href="./images.krakva/symbol-defs.svg#icon-in"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
