--- a/index.html
+++ b/index.html
@@ -439,7 +439,8 @@
             </label>
           </li>
             <li class="modal-item">
-              <label class="">
+              <label class="modal-label">
+                Коментар
                 <textarea class="modal-textarea" placeholder="Введiть текст" required></textarea>
               </label>
             </li>
