--- a/index.html
+++ b/index.html
@@ -399,9 +399,30 @@
             </li>
           </ul>
         </div>
+         <!-- розсилка -->
+        <div class="footer-subscribe">
+          <h2 class="footer-tiiitle">Підпишіться на розсилку</h2>
+          <form class="footer-form">
+            <input type="email" class="footer-input" placeholder="E-mail" required>
+            <button class="footer-button" type="submit">
+              Підписатися
+              <svg class="footer-comit">
+                <use href="./images.krakva/symbol-defs.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+       <!-- розсилка -->
       </div>
     </footer>
 
+    <!--     модалка
+             |     |
+             |     |
+             |     |
+             |     |
+            \|/   \|/     -->
+        
     <div class="window is-hidden" data-modal>
     <div class="modal">
       <button class="modal-close" type="button-close" data-modal-close>
