--- a/index.html
+++ b/index.html
@@ -348,24 +348,22 @@
     <!--  №5 -->
     <footer class="foot">
       <div class="container">
-      <div>
-        <a href="./index.html" class="foot-logo">Studio</a>
-        <address class="foot-adrs">
-          <ul class="foot-ul">
-            <li class="foot-li">
-              <a class="foot-ul-li-a">м. Київ, пр-т Лесі Українки, 26</a>
-            </li>
-            <li class="foot-li">
-              <a class="foot-ul-li-aa" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a>
-            </li>
-            <li class="foot-li">
-              <a class="foot-ul-li-aaa" href="tel:+380961111111"
-                >+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
-      </div>
+        <div>
+          <a href="./index.html" class="foot-logo">Studio</a>
+          <address class="foot-adrs">
+            <ul class="foot-ul">
+              <li class="foot-li">
+                <a class="foot-ul-li-a">м. Київ, пр-т Лесі Українки, 26</a>
+              </li>
+              <li class="foot-li">
+                <a class="foot-ul-li-aa" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="foot-li">
+                <a class="foot-ul-li-aaa" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
         <div class="footer-social">
           <h2 class="footer-tiitle">приєднуйтесь</h2>
           <ul class="footer-items">
@@ -386,7 +384,7 @@
             <li class="footer-elemet">
               <a href="" class="footer-link">
                 <svg class="footer-icon">
-                  <use  href="./images.krakva/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images.krakva/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -399,7 +397,7 @@
             </li>
           </ul>
         </div>
-         <!-- розсилка -->
+        <!-- Форма подписки в конце контейнера -->
         <div class="footer-subscribe">
           <h2 class="footer-tiiitle">Підпишіться на розсилку</h2>
           <form class="footer-form">
@@ -412,7 +410,6 @@
             </button>
           </form>
         </div>
-       <!-- розсилка -->
       </div>
     </footer>
 
