--- a/portfolio.html
+++ b/portfolio.html
@@ -238,6 +238,20 @@
             </li>
           </ul>
         </div>
+         <!-- розсилка -->
+        <div class="footer-subscribe">
+          <h2 class="footer-tiiitle">Підпишіться на розсилку</h2>
+          <form class="footer-form">
+            <input type="email" class="footer-input" placeholder="E-mail" required>
+            <button class="footer-button" type="submit">
+              Підписатися
+              <svg class="footer-comit">
+                <use href="./images.krakva/symbol-defs.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+       <!-- розсилка -->
       </div>
     </footer>
   </body>
